--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:scss:fix": "stylelint -c config.stylelint.js sources/**/*.scss --fix",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
+    "lint:phpcs": "bash -c 'phpcs --standard=PSR12 *.php'",
     "prepare": "husky install"
   },
   "repository": {
