Applied style lint rules to multiple files including hero-banner.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,5 @@
 {
-  "main.css": "/css/main.aa9cc729a8283ced5d41.css",
-  "main.js": "/js/main.cbaa3a21adcc511986a9.js",
-  "main.css.map": "/css/main.aa9cc729a8283ced5d41.css.map",
-  "main.js.map": "/js/main.cbaa3a21adcc511986a9.js.map"
+  "main.js": "/js/main.8f2b16e655970c688256.js",
+  "main.css": "/css/main.f5d1f99c449dfad77c4d.css",
+  "main.css.map": "/css/main.f5d1f99c449dfad77c4d.css.map"
 }
