Applied stylelint and fixed the errors.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
-  "main.js": "/js/main.8f2b16e655970c688256.js",
-  "main.css": "/css/main.f5d1f99c449dfad77c4d.css",
-  "main.css.map": "/css/main.f5d1f99c449dfad77c4d.css.map"
+  "main.css": "/css/main.02e8dc3a0196f5f429d0.css",
+  "main.js": "/js/main.c103d8619319f1632672.js",
+  "main.css.map": "/css/main.02e8dc3a0196f5f429d0.css.map",
+  "main.js.map": "/js/main.c103d8619319f1632672.js.map"
 }
