--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "main.css": "/css/main.02e8dc3a0196f5f429d0.css",
-  "main.js": "/js/main.c103d8619319f1632672.js",
-  "main.css.map": "/css/main.02e8dc3a0196f5f429d0.css.map",
-  "main.js.map": "/js/main.c103d8619319f1632672.js.map"
+  "main.css": "/css/main.350f81eb84a34923840f.css",
+  "main.js": "/js/main.ed4e9cec9315d67893f5.js",
+  "main.js.map": "/js/main.ed4e9cec9315d67893f5.js.map",
+  "main.css.map": "/css/main.350f81eb84a34923840f.css.map"
 }
