--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
     "webpack-manifest-plugin": "^5.0.1"
   },
   "lint-staged": {
-    "sources/**/*.js": [
-      "eslint -c config.eslint.js --fix"
+    "*.js": [
+      "eslint --fix",
+      "git add"
     ],
-    "sources/**/*.scss": [
-      "stylelint -c config.stylelint.js --fix"
+    "*.scss": [
+      "stylelint --fix",
+      "git add"
     ]
   }
 }
