--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "authors": [
         {
-            "name": "zealousweb"
+            "name": "zealplus"
         }
     ],
     "require-dev": {
