--- a/package.json
+++ b/package.json
@@ -6,24 +6,20 @@
   },
   "private": true,
   "description": "A starter theme for WordPress with modern JavaScript and CSS tooling.",
-  "main": "config/config.js",
   "type": "module",
   "scripts": {
+    "preinstall": "nvm use 22 && composer install",
+    "prepare": "husky install",
     "dev": "webpack --mode development",
     "watch": "webpack --watch",
     "build": "webpack --mode production",
-    "lint:js": "eslint -c config.eslint.js sources/**/*.js && echo \"No lint errors found in JS.\"",
+    "lint:js": "eslint -c config.eslint.js sources/**/*.js",
     "lint:js:fix": "eslint -c config.eslint.js sources/**/*.js --fix",
-    "lint:scss": "stylelint -c config.stylelint.js sources/**/*.scss && echo \"No lint errors found in SCSS.\"",
+    "lint:scss": "stylelint -c config.stylelint.js sources/**/*.scss",
     "lint:scss:fix": "stylelint -c config.stylelint.js sources/**/*.scss --fix",
-    "lint": "npm run lint:js && npm run lint:scss",
+    "lint": "npm run lint:js && npm run lint:scss && npm run lint:phpcs",
     "lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
-    "lint:phpcs": "bash -c 'phpcs --standard=PSR12 *.php'",
-    "prepare": "husky install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mgediya/wp-starter-theme.git"
+    "lint:phpcs": "bash -c 'phpcs --standard=PSR12 *.php'"
   },
   "keywords": [
     "WordPress",
@@ -32,12 +28,8 @@
     "webpack",
     "sass"
   ],
-  "author": "ZealousWeb Technologies",
+  "author": "zwt",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mgediya/wp-starter-theme/issues"
-  },
-  "homepage": "https://github.com/mgediya/wp-starter-theme#readme",
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
@@ -46,7 +38,7 @@
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "eslint": "^9.23.0",
-    "husky": "^9.1.7",
+    "husky": "^8.0.0",
     "lint-staged": "^15.5.0",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss-loader": "^8.1.1",
@@ -60,6 +52,7 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "swiper": "^11.2.6",
     "webpack-manifest-plugin": "^5.0.1"
   },
@@ -69,7 +62,7 @@
       "git add"
     ],
     "*.scss": [
-     "stylelint -c config.stylelint.js --fix",
+      "stylelint -c config.stylelint.js --fix",
       "git add"
     ]
   }
