--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "description": "A starter theme for WordPress with modern JavaScript and CSS tooling.",
   "type": "module",
   "scripts": {
-    "preinstall": "nvm use 22 && composer install",
-    "prepare": "husky install",
+    "preinstall": "composer install",
     "dev": "webpack --mode development",
     "watch": "webpack --watch",
     "build": "webpack --mode production",
@@ -33,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
+    "@types/jquery": "^3.5.32",
     "babel-loader": "^10.0.0",
     "cspell": "^8.18.1",
     "css-loader": "^7.1.2",
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "jquery": "^3.7.1",
     "swiper": "^11.2.6",
     "webpack-manifest-plugin": "^5.0.1"
   },
