--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "main.css": "/css/main.54aac509894693d8b8a8.css",
-  "main.js": "/js/main.8a3c9e6410136e1bbbec.js",
-  "main.js.map": "/js/main.8a3c9e6410136e1bbbec.js.map",
-  "main.css.map": "/css/main.54aac509894693d8b8a8.css.map"
+  "main.css": "/css/main.eaf8e6903b51520db58f.css",
+  "main.js": "/js/main.454e9395791773d5bc0a.js",
+  "main.css.map": "/css/main.eaf8e6903b51520db58f.css.map",
+  "main.js.map": "/js/main.454e9395791773d5bc0a.js.map"
 }
