--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,5 @@
 {
-  "main.css": "/css/main.eaf8e6903b51520db58f.css",
-  "main.js": "/js/main.454e9395791773d5bc0a.js",
-  "main.css.map": "/css/main.eaf8e6903b51520db58f.css.map",
-  "main.js.map": "/js/main.454e9395791773d5bc0a.js.map"
+  "main.js": "/js/main.5990d8788c1c41762843.js",
+  "main.css": "/css/main.a7cfe44c6272f9f9392a.css",
+  "main.css.map": "/css/main.a7cfe44c6272f9f9392a.css.map"
 }
