Javascript menu issue fixed

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,5 @@
 {
-  "main.css": "/css/main.5df85559f57efe056077.css",
-  "main.js": "/js/main.b0a10dba3a4ae3d11d88.js",
-  "main.css.map": "/css/main.5df85559f57efe056077.css.map",
-  "main.js.map": "/js/main.b0a10dba3a4ae3d11d88.js.map"
+  "main.js": "/js/main.93ce4eabaad1b1ad4fa8.js",
+  "main.css": "/css/main.13ae647202ac5dca31aa.css",
+  "main.css.map": "/css/main.13ae647202ac5dca31aa.css.map"
 }
