--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:scss:fix": "stylelint -c config.stylelint.js sources/**/*.scss --fix",
     "lint": "npm run lint:js && npm run lint:scss && npm run lint:phpcs",
     "lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
-    "lint:phpcs": "bash -c 'phpcs --standard=PSR12 /**/*.php'"
+    "lint:phpcs": "bash -c 'phpcs --standard=PSR12 *.php'"
   },
   "keywords": [
     "WordPress",
@@ -37,26 +37,27 @@
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "eslint": "^9.23.0",
+    "glob": "^11.0.1",
     "husky": "^8.0.0",
     "lint-staged": "^15.5.0",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss-loader": "^8.1.1",
+    "purgecss-webpack-plugin": "^7.0.2",
     "sass": "^1.86.3",
     "sass-loader": "^16.0.5",
-    "stylelint": "^16.17.0",
+    "stylelint": "^16.18.0",
+    "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-standard": "^37.0.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-manifest-plugin": "^5.0.1"
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
-    "glob": "^11.0.1",
     "jquery": "^3.7.1",
-    "purgecss-webpack-plugin": "^7.0.2",
-    "swiper": "^11.2.6",
-    "webpack-manifest-plugin": "^5.0.1"
+    "swiper": "^11.2.6"
   },
   "lint-staged": {
     "*.js": [
