Fixed the ordering stylelint
Fixed the ordering stylelint

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,5 +1,4 @@
 {
-  "main.js": "/js/main.fafaa4804a7a1465825f.js",
-  "main.css": "/css/main.4852017319f54c0225c2.css",
-  "main.css.map": "/css/main.4852017319f54c0225c2.css.map"
+  "main.css": "/css/main.c9471ad6b6f500ea5726.css",
+  "main.js": "/js/main.52ae3c647bf7ccb870f2.js"
 }
