--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "lint:js:fix": "eslint -c config.eslint.js sources/**/*.js --fix",
     "lint:scss": "stylelint -c config.stylelint.js sources/**/*.scss",
     "lint:scss:fix": "stylelint -c config.stylelint.js sources/**/*.scss --fix",
-    "lint": "npm run lint:js && npm run lint:scss && npm run lint:phpcs",
+    "lint": "npm run lint:js && npm run lint:scss && npm run phpcs",
     "lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
-    "lint:phpcs": "bash -c 'phpcs --standard=PSR12 *.php'"
+    "phpcs": "bash -c 'phpcs --standard=PSR12 --ignore=vendor/* ./**/*.php'",
+    "phpcbf": "bash -c 'phpcbf --standard=PSR12 --ignore=vendor/* ./**/*.php'"
   },
   "keywords": [
     "WordPress",
@@ -47,6 +48,7 @@
     "sass-loader": "^16.0.5",
     "stylelint": "^16.18.0",
     "stylelint-config-clean-order": "^7.0.0",
+    "stylelint-config-standard": "^37.0.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.98.0",
