--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lint:scss:fix": "stylelint -c config.stylelint.js sources/**/*.scss --fix",
     "lint": "npm run lint:js && npm run lint:scss && npm run phpcs",
     "lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
-    "phpcs": "bash -c 'phpcs --standard=PSR12 --ignore=vendor/* ./**/*.php'",
-    "phpcbf": "bash -c 'phpcbf --standard=PSR12 --ignore=vendor/* ./**/*.php'"
+    "phpcs": "phpcs",
+    "phpcbf": "phpcbf"
   },
   "keywords": [
     "WordPress",
