--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wp-starter-theme",
   "version": "1.0.0",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "private": true,
   "description": "A starter theme for WordPress with modern JavaScript and CSS tooling.",
@@ -47,6 +47,7 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
     "autoprefixer": "^10.4.21",
+    "fast-glob": "^3.3.3",
     "jquery": "^3.7.1",
     "swiper": "^11.2.6",
     "vite": "^6.3.5"
