--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,4 +1,6 @@
 {
-  "main.css": "/css/main.c9471ad6b6f500ea5726.css",
-  "main.js": "/js/main.52ae3c647bf7ccb870f2.js"
+  "main.js": "/js/main.443ba3ec83e8b77f2013.js",
+  "main.css": "/css/main.83079845c8230c0ad74e.css",
+  "modules/ajax-scripts.js": "/js/modules/ajax-scripts.faf236a9efb3b551e905.js",
+  "main.css.map": "/css/main.83079845c8230c0ad74e.css.map"
 }
