--- a/package.json
+++ b/package.json
@@ -1,77 +1,76 @@
 {
-  "name": "wp-starter-theme",
-  "version": "1.0.0",
-  "engines": {
-    "node": ">=22"
-  },
-  "private": true,
-  "description": "A starter theme for WordPress with modern JavaScript and CSS tooling.",
-  "type": "module",
-  "scripts": {
-    "dev": "webpack --mode development",
-    "watch": "webpack --watch",
-    "build": "webpack --mode production",
-    "lint:js": "eslint -c config.eslint.js sources/**/*.js",
-    "lint:js:fix": "eslint -c config.eslint.js sources/**/*.js --fix",
-    "lint:scss": "stylelint -c config.stylelint.js sources/**/*.scss",
-    "lint:scss:fix": "stylelint -c config.stylelint.js sources/**/*.scss --fix",
-    "lint": "npm run lint:js && npm run lint:scss && npm run phpcs",
-    "lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
-    "phpcs": "phpcs",
-    "phpcbf": "phpcbf"
-  },
-  "keywords": [
-    "WordPress",
-    "theme",
-    "starter",
-    "webpack",
-    "sass"
-  ],
-  "author": "zwt",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "@types/jquery": "^3.5.32",
-    "babel-loader": "^10.0.0",
-    "cspell": "^8.18.1",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.2",
-    "eslint": "^9.23.0",
-    "glob": "^11.0.1",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.5.0",
-    "mini-css-extract-plugin": "^2.9.2",
-    "postcss-loader": "^8.1.1",
-    "purgecss-webpack-plugin": "^7.0.2",
-    "sass": "^1.86.3",
-    "sass-loader": "^16.0.5",
-    "stylelint": "^16.18.0",
-    "stylelint-config-clean-order": "^7.0.0",
-    "stylelint-config-standard": "^37.0.0",
-    "stylelint-config-standard-scss": "^14.0.0",
-    "terser-webpack-plugin": "^5.3.14",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-manifest-plugin": "^5.0.1"
-  },
-  "dependencies": {
-    "@fancyapps/ui": "^5.0.36",
-    "jquery": "^3.7.1",
-    "swiper": "^11.2.6"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint -c config.eslint.js --fix",
-      "git add"
-    ],
-    "*.scss": [
-      "stylelint -c config.stylelint.js --fix",
-      "git add"
-    ],
-    "*.php": [
-      "phpcs",
-      "git add"
-    ]
-  }
+	"name": "wp-starter-theme",
+	"version": "1.0.0",
+	"engines": {
+		"node": ">=22"
+	},
+	"private": true,
+	"description": "A starter theme for WordPress with modern JavaScript and CSS tooling.",
+	"type": "module",
+	"scripts": {
+		"dev": "webpack --mode development",
+		"watch": "webpack --watch",
+		"build": "webpack --mode production",
+		"lint:js": "eslint -c config.eslint.js sources/**/*.js",
+		"lint:js:fix": "eslint -c config.eslint.js sources/**/*.js --fix",
+		"lint:scss": "stylelint -c config.stylelint.js sources/**/*.scss",
+		"lint:scss:fix": "stylelint -c config.stylelint.js sources/**/*.scss --fix",
+		"lint": "npm run lint:js && npm run lint:scss && npm run phpcs",
+		"lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
+		"phpcs": "phpcs",
+		"phpcbf": "phpcbf"
+	},
+	"keywords": [
+		"WordPress",
+		"theme",
+		"starter",
+		"webpack",
+		"sass"
+	],
+	"author": "zwt",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "^7.26.10",
+		"@babel/preset-env": "^7.26.9",
+		"@types/jquery": "^3.5.32",
+		"babel-loader": "^10.0.0",
+		"cspell": "^8.18.1",
+		"css-loader": "^7.1.2",
+		"css-minimizer-webpack-plugin": "^7.0.2",
+		"eslint": "^9.23.0",
+		"glob": "^11.0.1",
+		"husky": "^8.0.0",
+		"lint-staged": "^15.5.0",
+		"mini-css-extract-plugin": "^2.9.2",
+		"postcss-loader": "^8.1.1",
+		"purgecss-webpack-plugin": "^7.0.2",
+		"sass": "^1.86.3",
+		"sass-loader": "^16.0.5",
+		"stylelint": "^16.18.0",
+		"stylelint-config-clean-order": "^7.0.0",
+		"stylelint-config-standard-scss": "^14.0.0",
+		"terser-webpack-plugin": "^5.3.14",
+		"webpack": "^5.98.0",
+		"webpack-cli": "^6.0.1",
+		"webpack-manifest-plugin": "^5.0.1"
+	},
+	"dependencies": {
+		"@fancyapps/ui": "^5.0.36",
+		"jquery": "^3.7.1",
+		"swiper": "^11.2.6"
+	},
+	"lint-staged": {
+		"sources/**/*.js": [
+			"eslint -c config.eslint.js --fix",
+			"git add"
+		],
+		"sources/**/*.scss": [
+			"stylelint -c config.stylelint.js --fix",
+			"git add"
+		],
+		"*.php": [
+			"phpcs",
+			"git add"
+		]
+	}
 }
