--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,14 @@
 {
-  "main.js": "/js/main.443ba3ec83e8b77f2013.js",
-  "main.css": "/css/main.83079845c8230c0ad74e.css",
-  "modules/ajax-scripts.js": "/js/modules/ajax-scripts.faf236a9efb3b551e905.js",
-  "main.css.map": "/css/main.83079845c8230c0ad74e.css.map"
+  "main.css": "/css/main.dev.css",
+  "main.js": "/js/main.dev.js",
+  "modules/ajax-scripts.js": "/js/modules/ajax-scripts.dev.js",
+  "vendor/swiper.js": "/js/vendor/swiper.dev.js",
+  "vendor/common.css": "/css/vendor/common.dev.css",
+  "vendor/fancyapps.js": "/js/vendor/fancyapps.dev.js",
+  "main.dev.css.map": "/css/main.dev.css.map",
+  "main.dev.js.map": "/js/main.dev.js.map",
+  "ajax-scripts.dev.js.map": "/js/modules/ajax-scripts.dev.js.map",
+  "swiper.dev.js.map": "/js/vendor/swiper.dev.js.map",
+  "common.dev.css.map": "/css/vendor/common.dev.css.map",
+  "fancyapps.dev.js.map": "/js/vendor/fancyapps.dev.js.map"
 }
