--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "webpack --mode development",
-		"watch": "webpack --watch",
+		"watch": "webpack --watch --mode development",
 		"build": "webpack --mode production",
 		"lint:js": "eslint -c config.eslint.js sources/**/*.js",
 		"lint:js:fix": "eslint -c config.eslint.js sources/**/*.js --fix",
@@ -52,7 +52,9 @@
 		"terser-webpack-plugin": "^5.3.14",
 		"webpack": "^5.98.0",
 		"webpack-cli": "^6.0.1",
-		"webpack-manifest-plugin": "^5.0.1"
+		"webpack-manifest-plugin": "^5.0.1",
+		"webpack-build-notifier": "^3.1.0",
+		"webpackbar": "^7.0.0"
 	},
 	"dependencies": {
 		"@fancyapps/ui": "^5.0.36",
