--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
 	"description": "A starter theme for WordPress with modern JavaScript and CSS tooling.",
 	"type": "module",
 	"scripts": {
-		"dev": "webpack --mode development",
 		"watch": "webpack --watch --mode development",
 		"build": "webpack --mode production",
 		"lint:js": "eslint -c config.eslint.js sources/**/*.js",
@@ -18,7 +17,9 @@
 		"lint": "npm run lint:js && npm run lint:scss && npm run phpcs",
 		"lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
 		"phpcs": "phpcs",
-		"phpcbf": "phpcbf"
+		"phpcbf": "phpcbf",
+		"prepare": "husky install"
+
 	},
 	"keywords": [
 		"WordPress",
