--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "wp-starter-theme",
+	"name": "zealbase",
 	"version": "1.0.0",
 	"engines": {
 		"node": ">=20"
@@ -19,7 +19,6 @@
 		"phpcs": "phpcs",
 		"phpcbf": "phpcbf",
 		"prepare": "husky install"
-
 	},
 	"keywords": [
 		"WordPress",
@@ -52,13 +51,14 @@
 		"stylelint-config-standard-scss": "^14.0.0",
 		"terser-webpack-plugin": "^5.3.14",
 		"webpack": "^5.98.0",
+		"webpack-build-notifier": "^3.1.0",
 		"webpack-cli": "^6.0.1",
 		"webpack-manifest-plugin": "^5.0.1",
-		"webpack-build-notifier": "^3.1.0",
 		"webpackbar": "^7.0.0"
 	},
 	"dependencies": {
 		"@fancyapps/ui": "^5.0.36",
+		"fs": "^0.0.1-security",
 		"jquery": "^3.7.1",
 		"swiper": "^11.2.6"
 	},
