--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 	"scripts": {
 		"watch": "webpack --watch --mode development",
 		"build": "webpack --mode production",
-		"lint:js": "eslint -c config.eslint.js sources/**/*.js",
-		"lint:js:fix": "eslint -c config.eslint.js sources/**/*.js --fix",
-		"lint:scss": "stylelint -c config.stylelint.js sources/**/*.scss",
-		"lint:scss:fix": "stylelint -c config.stylelint.js sources/**/*.scss --fix",
+		"lint:js": "eslint -c config/config.eslint.js sources/**/*.js",
+		"lint:js:fix": "eslint -c config/config.eslint.js sources/**/*.js --fix",
+		"lint:scss": "stylelint -c config/config.stylelint.js sources/**/*.scss",
+		"lint:scss:fix": "stylelint -c config/config.stylelint.js sources/**/*.scss --fix",
 		"lint": "npm run lint:js && npm run lint:scss && npm run phpcs",
 		"lint:fix": "npm run lint:js:fix && npm run lint:scss:fix",
 		"phpcs": "phpcs",
@@ -64,11 +64,11 @@
 	},
 	"lint-staged": {
 		"sources/**/*.js": [
-			"eslint -c config.eslint.js --fix",
+			"eslint -c config/config.eslint.js --fix",
 			"git add"
 		],
 		"sources/**/*.scss": [
-			"stylelint -c config.stylelint.js --fix",
+			"stylelint -c config/config.stylelint.js --fix",
 			"git add"
 		],
 		"*.php": [
